# XML-parser

./: CMakeLists.txt  README.md  TODO  XML_general_importer.sln
.github/workflows/: qualityCheck.yml  runTests.yml
Example/: Example.cpp  Example.vcxproj  Example.vcxproj.filters  XML_test_file.xml
Example/x64/Debug/: vc141.idb
Example/x64/Debug/Example.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Example/x64/Release/Example.tlog/: CL.command.1.tlog  CL.write.1.tlog  Example.lastbuildstate  Example.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Examples/: CMakeLists.txt  Example-01.cpp  Example-02.cpp  Example-03.cpp  Example-04.cpp  Example-05.cpp  XML_example_01.xml  XML_example_04a.xml
Examples/Ex_01/: Main_01.cpp
Examples/Ex_02/: Main_02.cpp
Examples/Ex_03/: Main_03.cpp
Examples/Ex_04/: Main_04.cpp  XML_example_04b.xml
GUI/: XML_GUI.html
Lib/: CMakeLists.txt
Lib/cmake/: XML-ParserConfig.cmake.in
Lib/include/: Error.h  Parser.h  ParserError.h  Tag.h  TagHandler.h
Lib/include/XML-Parser/: Converter.h  Error.h  Parser.h  Tag.h
Lib/source/: Converter.cpp  Error.cpp  ErrorHandler.cpp  ErrorHandler.h  Parser.cpp  ParserError.cpp  Tag.cpp  Tag.h  TagHandler.cpp
Tests/: CMakeLists.txt  ExportTests.cpp  GenerationTests.cpp  ImportTest.xml  ImportTestComment.xml  ImportTestVersioned.xml  ImportTests.cpp  T_structure.cpp  T_structure.h
XML_general_importer/: XML_general_importer.vcxproj  XML_general_importer.vcxproj.filters  XML_importer.cpp  XML_importer.h
XML_general_importer/x64/Debug/: XML_general_importer.idb
XML_general_importer/x64/Debug/XML_gene.EDA20981.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  XML_general_importer.lastbuildstate
XML_general_importer/x64/Release/XML_gene.EDA20981.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
cmake/: MakeLibrary.cmake
content/: Makefile
content/Examples/Ex_01/: Main_01.cpp  XML_example_01.xml
content/Examples/Ex_02/: Main_02.cpp  XML_example_02.xml
content/Examples/Ex_03/: Main_03.cpp
content/GUI/: XML_GUI.html
content/GUI/src/JS/my_src/: buttons.js  connection.js
content/XML_Manager/: XML_Manager.cpp  XML_Manager.h
sample/: CMakeLists.txt  Example-01.cpp  Example-02.cpp  Example-03.cpp  Example-04.cpp  Example-05.cpp  ReadMe.cpp  XML_example_01.xml  XML_example_02.xml  XML_example_04b.xml
src/: CMakeLists.txt
src/include/XML-Parser/: Converter.h  Error.h  Parser.h  Tag.h
src/source/: Converter.cpp  Element.cpp  Element.h  Error.cpp  Parser.cpp  Stream.cpp  Stream.h  Tag.cpp  Utils.cpp  Utils.h
test/: CMakeLists.txt  Common.cpp  Common.h  ElementTests.cpp  ExportTests.cpp  ParserTests.cpp  TagTests.cpp  UtilsTest.cpp
test/test_data/: Chain.xml  Content.xml  Invalid.xml  Recursive.xml  TStructure.A.xml  TStructure.B.xml
x64/Debug/: Example.ilk  XML_general_importer.lib
x64/Release/: Example.iobj  Example.ipdb  XML_general_importer.lib
